@startuml
'https://plantuml.com/object-diagram


class Itinerary<<AggregateRoot>> {
    Int id
    CharField label
    ItineraryItemGroup[] items
    --
    DateTimeField updated_at
    DateTimeField created_at
    --
    Methods [TBC]
    ItineraryItemGroup newItineraryItemGroup(ItineraryItem[] = [])
    ItineraryItemGroup add(ItineraryItemGroup)
    void remove(ItineraryItemGroup)
    ItineraryItemGroup swap(ItineraryItemGroup old, ItineraryItemGroup new)
}
note right: Applies the Aggregate Root Concept from DDD to the Itinerary model

class ItineraryItemGroup {
    Int id
    CharField label
    fk<Itinerary> itinerary
    --
    DateTimeField updated_at
    DateTimeField created_at
}

class ItineraryItem {
    Int id
    FloatField longitude
    FloatField latitude
    fk<Activity> activity
    fk<ItineraryItemGroup> group
     ---
    DateTimeField updated_at
    DateTimeField created_at
}

class Activity {
    Int id
    CharField name
    CharField description
    TextField full_description
    CharField image
    ---
    DateTimeField updated_at
    DateTimeField created_at
}

Itinerary::ItineraryItemGroup <-- ItineraryItemGroup::id
ItineraryItemGroup::ItineraryItems <-- ItineraryItem::id
ItineraryItem::activity_id --> Activity::id
@enduml
